--- a/src/App.css
+++ b/src/App.css
@@ -159,12 +159,12 @@ p {
 }
 
 .description,
-#humidity,
-#wind {
+.humidity,
+.wind {
   font-size: 26px;
 }
 
-#weather-img {
+.weather-img {
   margin-left: 5px;
   padding-right: 70px;
 }
@@ -175,23 +175,23 @@ p {
   padding-bottom: 6px;
 }
 
-#footer {
+.footer {
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-#footer p {
+.footer p {
   font-size: 18px;
   color: #000;
   font-weight: bold;
 }
 
-#footer a {
+.footer a {
   text-decoration: none;
   padding-left: 5px;
 }
 
-#footer a:hover {
+.footer a:hover {
   text-decoration: underline;
 }
 
