--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ p {
   margin-top: 40px;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  /*max-width: fit-content;*/
+  max-width: fit-content;
 }
 
 .weather-forecast {
