Fix background image
Background images takes up all the space

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 /*react-weather-app*/
+body {
+  background-image: url("../src/images/background.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
 h1 {
   font-family: "Xanh Mono", monospace;
   font-size: 4em;
