Add styling to footer

--- a/src/App.css
+++ b/src/App.css
@@ -193,45 +193,41 @@ p {
   padding-bottom: 6px;
 }
 
-.footer {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.footer p {
-  font-size: 18px;
-  color: var(--primary-text-color);
-  font-weight: bold;
-}
-
-.footer a {
+.link {
   text-decoration: none;
-  padding-left: 5px;
 }
 
-.footer a:hover {
-  text-decoration: underline;
-}
-
-.logo {
+.fa-linkedin {
   display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  background-color: var(--secondary-bg-color);
-  padding: 5px 2px 5px 2px;
-  border-radius: 10px;
-  width: 370px;
-  margin: 0 auto;
+  font-size: 38px;
+  justify-content: left;
+  color: #0270ad;
+  padding-left: 25px;
+  filter: drop-shadow(2px 4px 1px rgb(0 0 0 / 0.3));
 }
 
-.logo img {
+.fa-github {
+  display: flex;
+  font-size: 38px;
+  justify-content: left;
+  color: var(--primary-text-color);
+  padding-left: 25px;
+  filter: drop-shadow(2px 4px 1px rgb(0 0 0 / 0.3));
+}
+
+footer .logo {
   width: 50px;
   border-radius: 50%;
+  filter: drop-shadow(2px 4px 1px rgb(0 0 0 / 0.3));
+  padding-right: 5px;
 }
 
-.logoTextSpan {
-  padding: 5px;
+.footer-container {
+  margin: 0 auto;
+  margin-top: 20px;
+  background-color: var(--secondary-bg-color);
+  width: 400px;
+  border-radius: 10px;
 }
 
 @media (max-width: 900px) {
